tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
{
  let f
    : (x: {foo: Float}) => Float
    = o => o.bar
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_1.kk:4:14
  │
4 │     = o => o.bar
  │              ^^^ No such property
  │
  = Available properties:
      foo
